--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>MJM</title>
     <meta name="description" content="">
     <meta name="author" content="">
+    <noscript>Unfortunately your browser does not support JavaScript. Please try another browser</noscript>
 
     <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -17,6 +18,7 @@
     <!-- FONT
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat|Playfair+Display" rel="stylesheet">
 
     <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
