--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>MJM</title>
     <meta name="description" content="">
     <meta name="author" content="">
-    <noscript>Unfortunately your browser does not support JavaScript. Please try another browser</noscript>
+
 
     <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -24,6 +24,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/skeleton.css">
+    <link rel="stylesheet" href="css/main.css">
 
     <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -44,7 +45,7 @@
         </div>-->
 
 
-
+        <noscript>Unfortunately your browser does not support JavaScript. Please try another browser</noscript>
 
         <label for="nav-burger" onclick="openNav()">
             <img class="two columns" id="menu" src="images/lastburger.svg" alt="menuburger">
