innan merge av master

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta charset="utf-8">
-    <title>MJM</title>
+    <title>MJM Skeleton</title>
     <meta name="description" content="">
     <meta name="author" content="">
     <noscript>Unfortunately your browser does not support JavaScript. Please try another browser</noscript>
