--- a/index.html
+++ b/index.html
@@ -190,9 +190,10 @@
 
         <!-- Slut Work-->
     </div>
-    <footer class="footer">
-        <span> &copy; Magnus Öhrström, Joanna Högberg & Max Jander</span>
-    </footer>
+ <footer class="footer row">
+            <span class="twelve columns"> &copy; Magnus Öhrström, Joanna Högberg & Max Jander</span>
+        </footer>
+
     <script type="text/javascript" src="scripts/script.js"></script>
     <script type="text/javascript" src="scripts/landing.js"></script>
     <script type="text/javascript" src="scripts/about.js"></script>
