--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <div class="container wrapper" id="scroll" onscroll="navFunc()">
+    <div class="wrapper" id="scroll" onscroll="navFunc()">
         <!--<div class="row">
             <div class="one-half column" style="margin-top: 25%">
                 <h4>Basic Page</h4>
