--- a/index.html
+++ b/index.html
@@ -96,18 +96,18 @@
                     <figure class="figure hover-figure" id="magnus">
                         <h1 class="hero-h1">M</h1>
                         <h2 class="profile-text profile-name">Magnus Öhrström</h2>
-                        <span class="profile-text two-thirds column" id="magnus-text">"Front-End Developer with a background in arts and crafts and a keen interest in form and function."</span>
+                        <span class="profile-text" id="magnus-text">"Front-End Developer with a background in arts and crafts and a keen interest in form and function."</span>
                         <a class="ghlink" target="blank" href="https://joannahogberg.github.io">
                             <img src="images/ghicon.svg" class="ghicon" alt="hej" />
                         </a>
-                        <img class="arrow child" src="images/arrow.svg" alt="" />
+                        <img class="arrow" src="images/arrow.svg" alt="" />
                         <div class="figure filter">
                         </div>
                     </figure>
                     <figure class="figure hover-figure" id="joanna">
                         <h1 class="hero-h1">J</h1>
                         <h2 class="profile-text profile-name">Joanna Högberg</h2>
-                        <span class="profile-text one-half column" id="joanna-text"> Front-End Developer with a passion for responsive design. Loves turning complex problems into simple, beautiful and interface designs with a focus on writing clean and efficient code.</span>
+                        <span class="profile-text" id="joanna-text"> Front-End Developer with a passion for responsive design. Loves turning complex problems into simple, beautiful and interface designs with a focus on writing clean and efficient code.</span>
                         <a class="ghlink" target="blank" href="https://joannahogberg.github.io">
                             <img src="images/ghicon.svg" class="ghicon" alt="hej" />
                         </a>
