--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
 
         </div>
-        <header id="top">
+        <header id="top" class="column">
             <div class="header row ">
 
 
@@ -190,9 +190,9 @@
 
         <!-- Slut Work-->
     </div>
- <footer class="footer row">
-            <span class="twelve columns"> &copy; Magnus Öhrström, Joanna Högberg & Max Jander</span>
-        </footer>
+    <footer class="footer row">
+        <span class="twelve columns"> &copy; Magnus Öhrström, Joanna Högberg & Max Jander</span>
+    </footer>
 
     <script type="text/javascript" src="scripts/script.js"></script>
     <script type="text/javascript" src="scripts/landing.js"></script>
