--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
 
         </div>
-        <header id="top" class="column">
+        <header id="top">
             <div class="header row ">
 
 
