--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <!-- FONT
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+    <!--<link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">-->
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Playfair+Display" rel="stylesheet">
 
     <!-- CSS
@@ -146,15 +146,16 @@
             </div>
             <h2 class="about-h1">About MJM</h2>
             <article class="about-article">
-              <div class="article-container five columns">
-                <img src="images/skyline.jpg" class="about-img tvelwe columns" alt="">
-                <h4 class="about-h4">Swedishly graceful development</h4>
-                <p class="about-p twelve columns">
-                    MJM was founded in Stockholm in 2016. We’re a collective of cutting-edge creatives, front-enders, designers and javascripters. <br /> While our society constantly changes MJM strive to always stand at the front line of the creative
-                    technology. We devote our lives to create a better online experience for all our clients, and understand the value of customizing our work to our clients brands. We provide our clients full digital services with focus on the user experience.
-                </p>
-                <img src="images/responsive.jpg" class="about-img twelve columns" alt="">
-              </div>
+                <div class="article-container five columns">
+                    <img src="images/skyline.jpg" class="about-img tvelwe columns" alt="">
+                    <h4 class="about-h4">Swedishly graceful development</h4>
+                    <p class="about-p twelve columns">
+                        MJM was founded in Stockholm in 2016. We’re a collective of cutting-edge creatives, front-enders, designers and javascripters. <br /> While our society constantly changes MJM strive to always stand at the front line of the creative
+                        technology. We devote our lives to create a better online experience for all our clients, and understand the value of customizing our work to our clients brands. We provide our clients full digital services with focus on the user
+                        experience.
+                    </p>
+                    <img src="images/responsive.jpg" class="about-img twelve columns" alt="">
+                </div>
             </article>
             <img class="arrow-about" src="images/arrow.svg" alt="" />
 
