--- a/contact.html
+++ b/contact.html
@@ -100,42 +100,42 @@
 
 
 
-                <div class="container-circles">
-                    <div class="one-half column">
+                <div class="container-circles one-half column">
+                    <!--<div class="one-half column">-->
 
 
 
-                        <div class="contact_circle one-third column" onclick="">
-                            <div class="info ">
-                                <div class="front face">
-                                    <img class="info_icon u-max-full-width" src="images/address.png" alt="logo">
-                                </div>
-                                <div class="back face">
-                                    <span class="contact-text">St:Eriksgatan XX <br/> 112 39 Stockholm</span>
-                                </div>
+                    <div class="contact_circle one-third column" onclick="">
+                        <div class="info ">
+                            <div class="front face">
+                                <img class="info_icon u-max-full-width" src="images/address.png" alt="logo">
+                            </div>
+                            <div class="back face">
+                                <span class="contact-text">St:Eriksgatan XX <br/> 112 39 Stockholm</span>
                             </div>
                         </div>
+                    </div>
 
-                        <div class="contact_circle one-third column" onclick="">
-                            <div class="info">
-                                <div class="front face">
-                                    <img class="info_icon u-max-full-width" src="images/phone.png" alt="logo">
-                                </div>
-                                <div class="back face">
-                                    <span class="contact-text">070-XXX XX XX</span>
-                                </div>
+                    <div class="contact_circle one-third column" onclick="">
+                        <div class="info">
+                            <div class="front face">
+                                <img class="info_icon u-max-full-width" src="images/phone.png" alt="logo">
+                            </div>
+                            <div class="back face">
+                                <span class="contact-text">070-XXX XX XX</span>
                             </div>
                         </div>
-                        <div class="contact_circle one-third column" onclick="">
-                            <div class="info">
-                                <div class="front face">
-                                    <img class="info_icon u-max-full-width" src="images/email.png" alt="logo">
-                                </div>
-                                <div class="back face">
-                                    <span class="contact-text">contact@mjm.com</span>
-                                </div>
+                    </div>
+                    <div class="contact_circle one-third column" onclick="">
+                        <div class="info">
+                            <div class="front face">
+                                <img class="info_icon u-max-full-width" src="images/email.png" alt="logo">
+                            </div>
+                            <div class="back face">
+                                <span class="contact-text">contact@mjm.com</span>
                             </div>
                         </div>
+                        <!--</div>-->
                     </div>
                 </div>
             </div>
