--- a/index.html
+++ b/index.html
@@ -138,12 +138,13 @@
         <!--Landingpage-END-->
 
         <!-- About // Magnus-->
+        <div id="about" class="skew-anchor">
+            <!--div to get anchorpoint correct-->
+        </div>
         <section class="about-box skew-box" id="about-id">
 
 
-            <div id="about">
-                <!--div to get anchorpoint correct-->
-            </div>
+
             <h2 class="about-h1">About MJM</h2>
             <article class="about-article">
               <div class="article-container five columns">
