--- a/contact.html
+++ b/contact.html
@@ -188,6 +188,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 
     <script type="text/javascript" src="scripts/script.js"></script>
+    <script type="text/javascript" src="scripts/about.js"></script>
 </body>
 
 </html>
