--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <!-- Overlay menu -->
             <div class="overlay-content">
                 <a href="index.html">HOME</a>
-                <a href="index.html#about">ABOUT</a>
+                <a href="index.html#about" onclick="closeNav()">ABOUT</a>
                 <a href="index.html#work" onclick="closeNav()">WORK</a>
                 <a href="contact.html">CONTACT</a>
                 <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">
@@ -117,7 +117,7 @@
                     </figure>
                     <figure class="figure hover-figure" id="max">
                         <h1 class="hero-h1">M</h1>
-                        <h2 class="profile-text profile-name">Max <br> Jander</h2>
+                        <h2 class="profile-text profile-name">Max Jander</h2>
                         <span class="profile-text" id="max-text">Front-End Developer with a sassy love for a cup of Java.</span>
 
                         <a class="ghlink" target="blank" href="https://github.com/maxjander">
