--- a/contact.html
+++ b/contact.html
@@ -57,7 +57,7 @@
             <!-- Overlay menu -->
             <div class="overlay-content">
                 <a href="index.html">HOME</a>
-                <a href="index.html#about" >ABOUT</a>
+                <a href="index.html#about">ABOUT</a>
                 <a href="index.html#work" onclick="closeNav()">WORK</a>
                 <a href="contact.html">CONTACT</a>
                 <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">
@@ -82,7 +82,7 @@
 
                     <a href="index.html#about" class="nav_link">ABOUT</a>
                     <a href="index.html#work" class="nav_link">WORK</a>
-                    <a href="contact.html" class="nav_link" id="thissection">CONTACT</a>
+                    <a href="contact.html" class="nav_link">CONTACT</a>
                 </nav>
             </div>
         </header>
@@ -144,7 +144,7 @@
         <div class="red_midbox">
             <div class="content_container">
                 <section class="contact-section-2 twelve columns">
-                    <h4>Let's start something great together!</h4>
+                    <h3>Let's start something great together!</h3>
                     <p class="darkgray"> If you are curious to hear more about what we can offer, give us a call or...</p>
 
 
@@ -158,7 +158,7 @@
 
         </div>
 
-        <div class="form_container ">
+        <div class="form_container twelve ">
             <div class="form_circle">
                 <h4 class="hero-form">Drop us a line!</h4>
                 <form class="contactform" name="contactform" method="post" action="X">
