--- a/contact.html
+++ b/contact.html
@@ -101,7 +101,7 @@
 
 
                 <div class="container-circles one-half column">
-                    <!--<div class="one-half column">-->
+
 
 
 
@@ -135,7 +135,7 @@
                                 <span class="contact-text">contact@mjm.com</span>
                             </div>
                         </div>
-                        <!--</div>-->
+
                     </div>
                 </div>
             </div>
@@ -183,7 +183,11 @@
 
     </div>
     <footer class="footer row">
-        <span class="twelve columns"> &copy; Magnus Öhrström, Joanna Högberg & Max Jander</span>
+        <span> 
+            <h5><a href="" class="link" title="Send us an email"> contact@mjm.com </a>| 08-XXX XX XX </h5>
+      
+      <h5> &copy; <a class="link" target="blank" href="https://github.com/magnusohrstrom" title="Magnus Github"> Magnus Öhrström</a>, <a class="link" target="blank" href="https://joannahogberg.github.io" title="Joanna Github">Joanna Högberg</a> & <a class="link" target="blank" href="https://github.com/maxjander" title="Max Github">Max Jander</a></h5> 
+        </span>
     </footer>
 
     <!-- End Document
