--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@
                         <h1 class="hero-h1">M</h1>
                         <h2 class="profile-text profile-name">Magnus Öhrström</h2>
                         <span class="profile-text" id="magnus-text">"Front-End Developer with a background in arts and crafts and a keen interest in form and function."</span>
-                        <a class="ghlink" target="blank" href="https://joannahogberg.github.io">
-                            <img src="images/ghicon.svg" class="ghicon" alt="hej" />
+                        <a class="ghlink" target="blank" href="https://github.com/magnusohrstrom">
+                            <img src="images/ghicon.svg" class="ghicon" alt="Link to Magnus Github" />
                         </a>
-                        <img class="arrow" src="images/arrow.svg" alt="" />
+                        <img class="arrow" src="images/arrow.svg" alt="Closing arrow" />
                         <div class="figure filter">
                         </div>
                     </figure>
@@ -110,9 +110,9 @@
                         <h2 class="profile-text profile-name">Joanna Högberg</h2>
                         <span class="profile-text" id="joanna-text"> Front-End Developer with a passion for responsive design. Loves turning complex problems into simple, beautiful and interface designs with a focus on writing clean and efficient code.</span>
                         <a class="ghlink" target="blank" href="https://joannahogberg.github.io">
-                            <img src="images/ghicon.svg" class="ghicon" alt="hej" />
+                            <img src="images/ghicon.svg" class="ghicon" alt="Link to Joannas Github" />
                         </a>
-                        <img class="arrow" src="images/arrow.svg" alt="">
+                        <img class="arrow" src="images/arrow.svg" alt="Closing arrow">
                         <div class="figure filter">
                         </div>
                     </figure>
@@ -122,9 +122,9 @@
                         <span class="profile-text" id="max-text">Front-End Developer with a sassy love for a cup of Java.</span>
 
                         <a class="ghlink" target="blank" href="https://github.com/maxjander">
-                            <img src="images/ghicon.svg" class="ghicon" alt="hej" />
+                            <img src="images/ghicon.svg" class="ghicon" alt="Link to Max Github" />
                         </a>
-                        <img class="arrow" src="images/arrow.svg" alt="">
+                        <img class="arrow" src="images/arrow.svg" alt="Closing arrow">
                         <div class="figure filter">
                         </div>
                     </figure>
@@ -194,7 +194,11 @@
         <!-- Slut Work-->
     </div>
     <footer class="footer row">
-        <span class="twelve columns"> &copy; Magnus Öhrström, Joanna Högberg & Max Jander</span>
+        <span> 
+            <h6><a href="" class="link" title="Send us an email"> contact@mjm.com </a>| 08-XXX XX XX </h6>
+      
+      <h6> &copy; <a class="link" target="blank" href="https://github.com/magnusohrstrom" title="Magnus Github"> Magnus Öhrström</a>, <a class="link" target="blank" href="https://joannahogberg.github.io" title="Joanna Github">Joanna Högberg</a> & <a class="link" target="blank" href="https://github.com/maxjander" title="Max Github">Max Jander</a></h6> 
+        </span>
     </footer>
 
     <script type="text/javascript" src="scripts/script.js"></script>
