--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                       <a href="https://maxjander.github.io/todo/" target="_blank">
                         <h4 class="work-h4">Todo List</h4></a>
                       <img src="images/todo.png" class="work-img twelve columns" alt="">
-                      <div class="info-container">
+                      <div class="twelve columns">
                      <p class="work-p">
                         This Todo list we built to showcase how structured we are as a company.
                      </p>
@@ -205,7 +205,7 @@
                                        <h4 class="work-h4">Pattis Dinner Helper</h4>
                                    </a>
                             <img src="images/food.png" class="work-img twelve columns" alt="">
-                             <div class="info-container">
+                             <div class="twelve columns">
                                  <p class="work-p">
                                      Patti is one of Swedens top chefs with an idea of making it easier to find inspiration in the kitchen. <br> She reached to us for help with branding, design and development for her application and this is the result we came up
                                      with.
