--- a/index.html
+++ b/index.html
@@ -183,7 +183,9 @@
                   Plantify, is on of our biggest clients, they have been with us since the begining.<br> Feel free to contact them for reference.
               </p>
                </div>
-           </div></article>
+           </div>
+         </div>
+       </article>
            <article class="work-article bgred">
                <div class="work-container five columns">
                   <div class="flex-item twelve columns">
@@ -195,7 +197,9 @@
                         This Todo list we built to showcase how structured we are as a company.
                      </p>
                       </div>
-                  </div></article>
+                  </div>
+                 </div>
+              </article>
 
                   <article class="work-article bggray">
                       <div class="work-container five columns">
@@ -212,7 +216,9 @@
 
                                  </p>
                              </div>
-                         </div></article>
+                         </div>
+                    </div>
+                 </article>
 
     <img class="arrow-about" src="images/arrow.svg" alt="Closing arrow" />
 
